--- a/archives/toutiao-search/2024-04-01.md
+++ b/archives/toutiao-search/2024-04-01.md
@@ -1,45 +1,68 @@
 # 2024-04-01
 
-共 138 条
+共 158 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Apr 01 2024 11:00:42 GMT+0800 (China Standard Time) -->
-1. [女子昏倒男孩喊人未果继续看电视](https://so.toutiao.com/search?keyword=女子昏倒男孩喊人未果继续看电视)
-1. [房东索赔上万租客赔四千合理吗](https://so.toutiao.com/search?keyword=房东索赔上万租客赔四千合理吗)
-1. [既是正能量又是大流量](https://so.toutiao.com/search?keyword=既是正能量又是大流量)
-1. [新能源车一年跑2万公里以上被拒保](https://so.toutiao.com/search?keyword=新能源车一年跑2万公里以上被拒保)
+<!-- 最后更新时间 Mon Apr 01 2024 12:07:02 GMT+0800 (China Standard Time) -->
+1. [重庆3岁孩子被从22楼扔下死亡](https://so.toutiao.com/search?keyword=重庆3岁孩子被从22楼扔下死亡)
+1. [南昌雷暴大风3人坠楼身亡](https://so.toutiao.com/search?keyword=南昌雷暴大风3人坠楼身亡)
+1. [万千气象看云南](https://so.toutiao.com/search?keyword=万千气象看云南)
+1. [房东索赔上万 租客赔四千合理吗](https://so.toutiao.com/search?keyword=房东索赔上万+租客赔四千合理吗)
+1. [普京幽默化解位置被州长误坐的尴尬](https://so.toutiao.com/search?keyword=普京幽默化解位置被州长误坐的尴尬)
 1. [问界新M7入门款车型降价2万](https://so.toutiao.com/search?keyword=问界新M7入门款车型降价2万)
-1. [疑似主播上台相亲被王婆劝下台](https://so.toutiao.com/search?keyword=疑似主播上台相亲被王婆劝下台)
-1. [新疆维吾尔自治区公安厅厅长调整](https://so.toutiao.com/search?keyword=新疆维吾尔自治区公安厅厅长调整)
-1. [雷军妻子陪邓文迪看SU7](https://so.toutiao.com/search?keyword=雷军妻子陪邓文迪看SU7)
-1. [大V：谁给提灯定损房东讹人的底气](https://so.toutiao.com/search?keyword=大V：谁给提灯定损房东讹人的底气)
-1. [13岁女孩帮同学取快递失踪 家属发声](https://so.toutiao.com/search?keyword=13岁女孩帮同学取快递失踪+家属发声)
+1. [婆婆担心产后儿媳请吊车将其送上楼](https://so.toutiao.com/search?keyword=婆婆担心产后儿媳请吊车将其送上楼)
+1. [王伟烈士墓前摆满鲜花和战机模型](https://so.toutiao.com/search?keyword=王伟烈士墓前摆满鲜花和战机模型)
+1. [巴黎奥运会到底出了什么问题](https://so.toutiao.com/search?keyword=巴黎奥运会到底出了什么问题)
+1. [新能源车一年跑2万公里以上被拒保](https://so.toutiao.com/search?keyword=新能源车一年跑2万公里以上被拒保)
 1. [成都致2死司机事发后举止怪异](https://so.toutiao.com/search?keyword=成都致2死司机事发后举止怪异)
 1. [灵隐寺：从未开通或授权开通商户号](https://so.toutiao.com/search?keyword=灵隐寺：从未开通或授权开通商户号)
-1. [罗永浩怒斥媒体黑小米汽车](https://so.toutiao.com/search?keyword=罗永浩怒斥媒体黑小米汽车)
+1. [疑似主播上台相亲被王婆劝下台](https://so.toutiao.com/search?keyword=疑似主播上台相亲被王婆劝下台)
 1. [成都一迈巴赫连撞多人致2死2伤](https://so.toutiao.com/search?keyword=成都一迈巴赫连撞多人致2死2伤)
-1. [特斯拉Model Y全系涨价5000元](https://so.toutiao.com/search?keyword=特斯拉Model+Y全系涨价5000元)
-1. [小米汽车副总裁回应陈震删雷军合影](https://so.toutiao.com/search?keyword=小米汽车副总裁回应陈震删雷军合影)
 1. [建材老板称曾倒贴退房事件房东几千](https://so.toutiao.com/search?keyword=建材老板称曾倒贴退房事件房东几千)
-1. [围观开封王婆说媒现场](https://so.toutiao.com/search?keyword=围观开封王婆说媒现场)
-1. [詹姆斯：我在NBA的时间不多了](https://so.toutiao.com/search?keyword=詹姆斯：我在NBA的时间不多了)
-1. [东契奇47+12+7 独行侠终结火箭连胜](https://so.toutiao.com/search?keyword=东契奇47+12+7+独行侠终结火箭连胜)
-1. [5岁男童身亡 爷爷后悔没争抚养权](https://so.toutiao.com/search?keyword=5岁男童身亡+爷爷后悔没争抚养权)
-1. [王婆说媒下午场改晚上：怕你们受罪](https://so.toutiao.com/search?keyword=王婆说媒下午场改晚上：怕你们受罪)
-1. [巴黎市长称奥运会不欢迎俄白运动员](https://so.toutiao.com/search?keyword=巴黎市长称奥运会不欢迎俄白运动员)
-1. [媒体：美日菲在中国周边升级挑衅](https://so.toutiao.com/search?keyword=媒体：美日菲在中国周边升级挑衅)
-1. [老人晨练打球被指扰民保安躺地阻止](https://so.toutiao.com/search?keyword=老人晨练打球被指扰民保安躺地阻止)
-1. [周鸿祎：小米汽车为什么叫SU7](https://so.toutiao.com/search?keyword=周鸿祎：小米汽车为什么叫SU7)
 1. [6人因“咸猪手”引发斗殴均被控制](https://so.toutiao.com/search?keyword=6人因“咸猪手”引发斗殴均被控制)
+1. [媒体：美日菲在中国周边升级挑衅](https://so.toutiao.com/search?keyword=媒体：美日菲在中国周边升级挑衅)
+1. [曼城连续50个英超主场进球纪录终结](https://so.toutiao.com/search?keyword=曼城连续50个英超主场进球纪录终结)
+1. [小米汽车副总裁回应陈震删雷军合影](https://so.toutiao.com/search?keyword=小米汽车副总裁回应陈震删雷军合影)
+1. [南昌红谷滩1600多棵树一夜被吹倒](https://so.toutiao.com/search?keyword=南昌红谷滩1600多棵树一夜被吹倒)
+1. [女子昏倒男孩喊人未果继续看电视](https://so.toutiao.com/search?keyword=女子昏倒男孩喊人未果继续看电视)
+1. [马英九今日抵深](https://so.toutiao.com/search?keyword=马英九今日抵深)
+1. [白鲸“承认”吓唬小朋友](https://so.toutiao.com/search?keyword=白鲸“承认”吓唬小朋友)
+1. [大V：谁给提灯定损房东讹人的底气](https://so.toutiao.com/search?keyword=大V：谁给提灯定损房东讹人的底气)
+1. [周鸿祎：小米汽车为什么叫SU7](https://so.toutiao.com/search?keyword=周鸿祎：小米汽车为什么叫SU7)
+1. [20.99万起 极氪007新增车型上市](https://so.toutiao.com/search?keyword=20.99万起+极氪007新增车型上市)
+1. [詹姆斯：我在NBA的时间不多了](https://so.toutiao.com/search?keyword=詹姆斯：我在NBA的时间不多了)
+1. [女子吃面加香菜被收10元事件疑反转](https://so.toutiao.com/search?keyword=女子吃面加香菜被收10元事件疑反转)
+1. [新疆维吾尔自治区公安厅厅长调整](https://so.toutiao.com/search?keyword=新疆维吾尔自治区公安厅厅长调整)
+1. [泽连斯基公开谈“撤退”施压美国](https://so.toutiao.com/search?keyword=泽连斯基公开谈“撤退”施压美国)
+1. [13岁女孩帮同学取快递失踪 家属发声](https://so.toutiao.com/search?keyword=13岁女孩帮同学取快递失踪+家属发声)
+1. [王婆说媒下午场改晚上：怕你们受罪](https://so.toutiao.com/search?keyword=王婆说媒下午场改晚上：怕你们受罪)
+1. [罗永浩怒斥媒体黑小米汽车](https://so.toutiao.com/search?keyword=罗永浩怒斥媒体黑小米汽车)
+1. [老人晨练打球被指扰民保安躺地阻止](https://so.toutiao.com/search?keyword=老人晨练打球被指扰民保安躺地阻止)
+1. [女子回应新婚丈夫找王婆说媒：将离婚](https://so.toutiao.com/search?keyword=女子回应新婚丈夫找王婆说媒：将离婚)
+1. [本赛季曼城对英超前5球队未尝一胜](https://so.toutiao.com/search?keyword=本赛季曼城对英超前5球队未尝一胜)
+1. [俄要求乌引渡恐袭案嫌犯 乌方回应](https://so.toutiao.com/search?keyword=俄要求乌引渡恐袭案嫌犯+乌方回应)
+1. [围观开封王婆说媒现场](https://so.toutiao.com/search?keyword=围观开封王婆说媒现场)
+1. [13岁女孩称帮同学取快递已失踪7天](https://so.toutiao.com/search?keyword=13岁女孩称帮同学取快递已失踪7天)
+1. [最高法发布饲养动物损害责任案例](https://so.toutiao.com/search?keyword=最高法发布饲养动物损害责任案例)
+1. [开封王婆：说媒现在变味了](https://so.toutiao.com/search?keyword=开封王婆：说媒现在变味了)
+1. [午评：沪指涨超1% 创业板指涨2.63%](https://so.toutiao.com/search?keyword=午评：沪指涨超1%+创业板指涨2.63%)
+1. [网友称体制内工作超稳定没勇气离开](https://so.toutiao.com/search?keyword=网友称体制内工作超稳定没勇气离开)
+1. [开封龙亭区多举措保障游客体验](https://so.toutiao.com/search?keyword=开封龙亭区多举措保障游客体验)
+1. [5岁男童身亡 爷爷后悔没争抚养权](https://so.toutiao.com/search?keyword=5岁男童身亡+爷爷后悔没争抚养权)
+1. [4月大外孙17斤姥姥嫌太瘦了](https://so.toutiao.com/search?keyword=4月大外孙17斤姥姥嫌太瘦了)
+1. [2024中国网络媒体论坛综述](https://so.toutiao.com/search?keyword=2024中国网络媒体论坛综述)
+1. [媒体：有足协人员退赃后留原岗位](https://so.toutiao.com/search?keyword=媒体：有足协人员退赃后留原岗位)
+1. [首饰金价格逼近每克700元](https://so.toutiao.com/search?keyword=首饰金价格逼近每克700元)
+1. [特斯拉Model Y全系涨价5000元](https://so.toutiao.com/search?keyword=特斯拉Model+Y全系涨价5000元)
+1. [房东索赔上万租客赔四千合理吗](https://so.toutiao.com/search?keyword=房东索赔上万租客赔四千合理吗)
+1. [既是正能量又是大流量](https://so.toutiao.com/search?keyword=既是正能量又是大流量)
+1. [雷军妻子陪邓文迪看SU7](https://so.toutiao.com/search?keyword=雷军妻子陪邓文迪看SU7)
+1. [东契奇47+12+7 独行侠终结火箭连胜](https://so.toutiao.com/search?keyword=东契奇47+12+7+独行侠终结火箭连胜)
+1. [巴黎市长称奥运会不欢迎俄白运动员](https://so.toutiao.com/search?keyword=巴黎市长称奥运会不欢迎俄白运动员)
 1. [村医给卖淫女看病被判刑为何引争议](https://so.toutiao.com/search?keyword=村医给卖淫女看病被判刑为何引争议)
 1. [南昌11级雷暴大风 空调外机吹移位](https://so.toutiao.com/search?keyword=南昌11级雷暴大风+空调外机吹移位)
-1. [4月大外孙17斤姥姥嫌太瘦了](https://so.toutiao.com/search?keyword=4月大外孙17斤姥姥嫌太瘦了)
-1. [网友称体制内工作超稳定没勇气离开](https://so.toutiao.com/search?keyword=网友称体制内工作超稳定没勇气离开)
-1. [媒体：有足协人员退赃后留原岗位](https://so.toutiao.com/search?keyword=媒体：有足协人员退赃后留原岗位)
-1. [女子回应新婚丈夫找王婆说媒：将离婚](https://so.toutiao.com/search?keyword=女子回应新婚丈夫找王婆说媒：将离婚)
 1. [男子发酒疯被老婆三耳光打回现实](https://so.toutiao.com/search?keyword=男子发酒疯被老婆三耳光打回现实)
 1. [媒体：合力化解加装电梯难题](https://so.toutiao.com/search?keyword=媒体：合力化解加装电梯难题)
-1. [开封王婆：说媒现在变味了](https://so.toutiao.com/search?keyword=开封王婆：说媒现在变味了)
 1. [俄要求乌逮捕并引渡参与恐袭人员](https://so.toutiao.com/search?keyword=俄要求乌逮捕并引渡参与恐袭人员)
 1. [律师评奔驰加塞事件：视为正当防卫](https://so.toutiao.com/search?keyword=律师评奔驰加塞事件：视为正当防卫)
 1. [雪姨王琳53岁活动状态](https://so.toutiao.com/search?keyword=雪姨王琳53岁活动状态)
@@ -47,13 +70,10 @@
 1. [采耳店收入2千被罚22万 强执申请撤回](https://so.toutiao.com/search?keyword=采耳店收入2千被罚22万+强执申请撤回)
 1. [3月百城二手住宅均价环比下跌0.56%](https://so.toutiao.com/search?keyword=3月百城二手住宅均价环比下跌0.56%)
 1. [男子王婆说媒相亲走红后妻子现身](https://so.toutiao.com/search?keyword=男子王婆说媒相亲走红后妻子现身)
-1. [13岁女孩称帮同学取快递已失踪7天](https://so.toutiao.com/search?keyword=13岁女孩称帮同学取快递已失踪7天)
 1. [Model 3/Y可免费选配星空灰车漆](https://so.toutiao.com/search?keyword=Model+3/Y可免费选配星空灰车漆)
 1. [男子街头被陌生女子追抱：已报警](https://so.toutiao.com/search?keyword=男子街头被陌生女子追抱：已报警)
 1. [巴勒斯坦新政府宣誓就职](https://so.toutiao.com/search?keyword=巴勒斯坦新政府宣誓就职)
-1. [泽连斯基公开谈“撤退”施压美国](https://so.toutiao.com/search?keyword=泽连斯基公开谈“撤退”施压美国)
 1. [国乒包揽WTT男女单打冠军](https://so.toutiao.com/search?keyword=国乒包揽WTT男女单打冠军)
-1. [白鲸“承认”吓唬小朋友](https://so.toutiao.com/search?keyword=白鲸“承认”吓唬小朋友)
 1. [陆军首次增派女兵参赛队赴俄参赛](https://so.toutiao.com/search?keyword=陆军首次增派女兵参赛队赴俄参赛)
 1. [黄山辟谣“天都峰4月1日开放”](https://so.toutiao.com/search?keyword=黄山辟谣“天都峰4月1日开放”)
 1. [足球报：泰山队被申花反击打懵](https://so.toutiao.com/search?keyword=足球报：泰山队被申花反击打懵)
