--- a/archives/toutiao-search/2024-04-01.md
+++ b/archives/toutiao-search/2024-04-01.md
@@ -1,47 +1,66 @@
 # 2024-04-01
 
-共 158 条
+共 175 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Apr 01 2024 12:07:02 GMT+0800 (China Standard Time) -->
-1. [重庆3岁孩子被从22楼扔下死亡](https://so.toutiao.com/search?keyword=重庆3岁孩子被从22楼扔下死亡)
+<!-- 最后更新时间 Mon Apr 01 2024 13:00:40 GMT+0800 (China Standard Time) -->
+1. [普京幽默化解位置被州长误坐的尴尬](https://so.toutiao.com/search?keyword=普京幽默化解位置被州长误坐的尴尬)
 1. [南昌雷暴大风3人坠楼身亡](https://so.toutiao.com/search?keyword=南昌雷暴大风3人坠楼身亡)
 1. [万千气象看云南](https://so.toutiao.com/search?keyword=万千气象看云南)
-1. [房东索赔上万 租客赔四千合理吗](https://so.toutiao.com/search?keyword=房东索赔上万+租客赔四千合理吗)
-1. [普京幽默化解位置被州长误坐的尴尬](https://so.toutiao.com/search?keyword=普京幽默化解位置被州长误坐的尴尬)
-1. [问界新M7入门款车型降价2万](https://so.toutiao.com/search?keyword=问界新M7入门款车型降价2万)
+1. [女子吃面加香菜被收10元事件疑反转](https://so.toutiao.com/search?keyword=女子吃面加香菜被收10元事件疑反转)
 1. [婆婆担心产后儿媳请吊车将其送上楼](https://so.toutiao.com/search?keyword=婆婆担心产后儿媳请吊车将其送上楼)
+1. [官方通报女子22楼扔下孩子：突发躁狂](https://so.toutiao.com/search?keyword=官方通报女子22楼扔下孩子：突发躁狂)
+1. [南昌红谷滩1600多棵树一夜被吹倒](https://so.toutiao.com/search?keyword=南昌红谷滩1600多棵树一夜被吹倒)
 1. [王伟烈士墓前摆满鲜花和战机模型](https://so.toutiao.com/search?keyword=王伟烈士墓前摆满鲜花和战机模型)
-1. [巴黎奥运会到底出了什么问题](https://so.toutiao.com/search?keyword=巴黎奥运会到底出了什么问题)
-1. [新能源车一年跑2万公里以上被拒保](https://so.toutiao.com/search?keyword=新能源车一年跑2万公里以上被拒保)
-1. [成都致2死司机事发后举止怪异](https://so.toutiao.com/search?keyword=成都致2死司机事发后举止怪异)
+1. [13岁女孩帮同学取快递失踪 家属发声](https://so.toutiao.com/search?keyword=13岁女孩帮同学取快递失踪+家属发声)
+1. [公安系统人事密集调整](https://so.toutiao.com/search?keyword=公安系统人事密集调整)
+1. [重庆3岁孩子被从22楼扔下死亡](https://so.toutiao.com/search?keyword=重庆3岁孩子被从22楼扔下死亡)
 1. [灵隐寺：从未开通或授权开通商户号](https://so.toutiao.com/search?keyword=灵隐寺：从未开通或授权开通商户号)
-1. [疑似主播上台相亲被王婆劝下台](https://so.toutiao.com/search?keyword=疑似主播上台相亲被王婆劝下台)
+1. [成都致2死司机事发后举止怪异](https://so.toutiao.com/search?keyword=成都致2死司机事发后举止怪异)
+1. [斯洛伐克飞行汽车将在中国生产](https://so.toutiao.com/search?keyword=斯洛伐克飞行汽车将在中国生产)
+1. [俄要求乌引渡恐袭案嫌犯 乌方回应](https://so.toutiao.com/search?keyword=俄要求乌引渡恐袭案嫌犯+乌方回应)
 1. [成都一迈巴赫连撞多人致2死2伤](https://so.toutiao.com/search?keyword=成都一迈巴赫连撞多人致2死2伤)
+1. [大V谈保加利亚给中国高铁的启示](https://so.toutiao.com/search?keyword=大V谈保加利亚给中国高铁的启示)
+1. [问界新M7入门款车型降价2万](https://so.toutiao.com/search?keyword=问界新M7入门款车型降价2万)
+1. [小米汽车回应漂移模式使用场景](https://so.toutiao.com/search?keyword=小米汽车回应漂移模式使用场景)
 1. [建材老板称曾倒贴退房事件房东几千](https://so.toutiao.com/search?keyword=建材老板称曾倒贴退房事件房东几千)
+1. [台军方辩解士兵被大陆无人机吓跑](https://so.toutiao.com/search?keyword=台军方辩解士兵被大陆无人机吓跑)
+1. [开封王婆：自带剧本的不要凑热闹](https://so.toutiao.com/search?keyword=开封王婆：自带剧本的不要凑热闹)
+1. [解放军将在中缅边境实兵实弹演习](https://so.toutiao.com/search?keyword=解放军将在中缅边境实兵实弹演习)
+1. [大V：谁给提灯定损房东讹人的底气](https://so.toutiao.com/search?keyword=大V：谁给提灯定损房东讹人的底气)
+1. [女子昏倒男孩喊人未果继续看电视](https://so.toutiao.com/search?keyword=女子昏倒男孩喊人未果继续看电视)
+1. [老人晨练打球被指扰民保安躺地阻止](https://so.toutiao.com/search?keyword=老人晨练打球被指扰民保安躺地阻止)
+1. [疑似主播上台相亲被王婆劝下台](https://so.toutiao.com/search?keyword=疑似主播上台相亲被王婆劝下台)
+1. [新能源车一年跑2万公里以上被拒保](https://so.toutiao.com/search?keyword=新能源车一年跑2万公里以上被拒保)
+1. [白鲸“承认”吓唬小朋友](https://so.toutiao.com/search?keyword=白鲸“承认”吓唬小朋友)
+1. [一架波音727货机在南苏丹机场坠毁](https://so.toutiao.com/search?keyword=一架波音727货机在南苏丹机场坠毁)
+1. [詹姆斯：我在NBA的时间不多了](https://so.toutiao.com/search?keyword=詹姆斯：我在NBA的时间不多了)
+1. [以军继续袭击加沙地带多地](https://so.toutiao.com/search?keyword=以军继续袭击加沙地带多地)
+1. [周鸿祎：小米汽车为什么叫SU7](https://so.toutiao.com/search?keyword=周鸿祎：小米汽车为什么叫SU7)
+1. [巴黎奥运会到底出了什么问题](https://so.toutiao.com/search?keyword=巴黎奥运会到底出了什么问题)
+1. [以色列总理：以军已准备好进攻拉法](https://so.toutiao.com/search?keyword=以色列总理：以军已准备好进攻拉法)
+1. [小米汽车副总裁回应陈震删雷军合影](https://so.toutiao.com/search?keyword=小米汽车副总裁回应陈震删雷军合影)
+1. [20.99万起 极氪007新增车型上市](https://so.toutiao.com/search?keyword=20.99万起+极氪007新增车型上市)
+1. [围观开封王婆说媒现场](https://so.toutiao.com/search?keyword=围观开封王婆说媒现场)
+1. [首饰金价格逼近每克700元](https://so.toutiao.com/search?keyword=首饰金价格逼近每克700元)
+1. [小米汽车回应建议舒淇代言SU7](https://so.toutiao.com/search?keyword=小米汽车回应建议舒淇代言SU7)
 1. [6人因“咸猪手”引发斗殴均被控制](https://so.toutiao.com/search?keyword=6人因“咸猪手”引发斗殴均被控制)
+1. [女生走错教室发现老师长得都很像](https://so.toutiao.com/search?keyword=女生走错教室发现老师长得都很像)
+1. [大V：通缩阴影下普通人如何把握命运](https://so.toutiao.com/search?keyword=大V：通缩阴影下普通人如何把握命运)
+1. [泽连斯基公开谈“撤退”施压美国](https://so.toutiao.com/search?keyword=泽连斯基公开谈“撤退”施压美国)
+1. [王婆说媒下午场改晚上：怕你们受罪](https://so.toutiao.com/search?keyword=王婆说媒下午场改晚上：怕你们受罪)
+1. [88岁王德顺穿大花袄走秀](https://so.toutiao.com/search?keyword=88岁王德顺穿大花袄走秀)
+1. [房东索赔上万 租客赔四千合理吗](https://so.toutiao.com/search?keyword=房东索赔上万+租客赔四千合理吗)
+1. [现货黄金升破2260美元/盎司](https://so.toutiao.com/search?keyword=现货黄金升破2260美元/盎司)
+1. [张颂文返乡参加亲戚婚礼](https://so.toutiao.com/search?keyword=张颂文返乡参加亲戚婚礼)
+1. [特斯拉Model Y全系涨价5000元](https://so.toutiao.com/search?keyword=特斯拉Model+Y全系涨价5000元)
 1. [媒体：美日菲在中国周边升级挑衅](https://so.toutiao.com/search?keyword=媒体：美日菲在中国周边升级挑衅)
 1. [曼城连续50个英超主场进球纪录终结](https://so.toutiao.com/search?keyword=曼城连续50个英超主场进球纪录终结)
-1. [小米汽车副总裁回应陈震删雷军合影](https://so.toutiao.com/search?keyword=小米汽车副总裁回应陈震删雷军合影)
-1. [南昌红谷滩1600多棵树一夜被吹倒](https://so.toutiao.com/search?keyword=南昌红谷滩1600多棵树一夜被吹倒)
-1. [女子昏倒男孩喊人未果继续看电视](https://so.toutiao.com/search?keyword=女子昏倒男孩喊人未果继续看电视)
 1. [马英九今日抵深](https://so.toutiao.com/search?keyword=马英九今日抵深)
-1. [白鲸“承认”吓唬小朋友](https://so.toutiao.com/search?keyword=白鲸“承认”吓唬小朋友)
-1. [大V：谁给提灯定损房东讹人的底气](https://so.toutiao.com/search?keyword=大V：谁给提灯定损房东讹人的底气)
-1. [周鸿祎：小米汽车为什么叫SU7](https://so.toutiao.com/search?keyword=周鸿祎：小米汽车为什么叫SU7)
-1. [20.99万起 极氪007新增车型上市](https://so.toutiao.com/search?keyword=20.99万起+极氪007新增车型上市)
-1. [詹姆斯：我在NBA的时间不多了](https://so.toutiao.com/search?keyword=詹姆斯：我在NBA的时间不多了)
-1. [女子吃面加香菜被收10元事件疑反转](https://so.toutiao.com/search?keyword=女子吃面加香菜被收10元事件疑反转)
 1. [新疆维吾尔自治区公安厅厅长调整](https://so.toutiao.com/search?keyword=新疆维吾尔自治区公安厅厅长调整)
-1. [泽连斯基公开谈“撤退”施压美国](https://so.toutiao.com/search?keyword=泽连斯基公开谈“撤退”施压美国)
-1. [13岁女孩帮同学取快递失踪 家属发声](https://so.toutiao.com/search?keyword=13岁女孩帮同学取快递失踪+家属发声)
-1. [王婆说媒下午场改晚上：怕你们受罪](https://so.toutiao.com/search?keyword=王婆说媒下午场改晚上：怕你们受罪)
 1. [罗永浩怒斥媒体黑小米汽车](https://so.toutiao.com/search?keyword=罗永浩怒斥媒体黑小米汽车)
-1. [老人晨练打球被指扰民保安躺地阻止](https://so.toutiao.com/search?keyword=老人晨练打球被指扰民保安躺地阻止)
 1. [女子回应新婚丈夫找王婆说媒：将离婚](https://so.toutiao.com/search?keyword=女子回应新婚丈夫找王婆说媒：将离婚)
 1. [本赛季曼城对英超前5球队未尝一胜](https://so.toutiao.com/search?keyword=本赛季曼城对英超前5球队未尝一胜)
-1. [俄要求乌引渡恐袭案嫌犯 乌方回应](https://so.toutiao.com/search?keyword=俄要求乌引渡恐袭案嫌犯+乌方回应)
-1. [围观开封王婆说媒现场](https://so.toutiao.com/search?keyword=围观开封王婆说媒现场)
 1. [13岁女孩称帮同学取快递已失踪7天](https://so.toutiao.com/search?keyword=13岁女孩称帮同学取快递已失踪7天)
 1. [最高法发布饲养动物损害责任案例](https://so.toutiao.com/search?keyword=最高法发布饲养动物损害责任案例)
 1. [开封王婆：说媒现在变味了](https://so.toutiao.com/search?keyword=开封王婆：说媒现在变味了)
@@ -52,8 +71,6 @@
 1. [4月大外孙17斤姥姥嫌太瘦了](https://so.toutiao.com/search?keyword=4月大外孙17斤姥姥嫌太瘦了)
 1. [2024中国网络媒体论坛综述](https://so.toutiao.com/search?keyword=2024中国网络媒体论坛综述)
 1. [媒体：有足协人员退赃后留原岗位](https://so.toutiao.com/search?keyword=媒体：有足协人员退赃后留原岗位)
-1. [首饰金价格逼近每克700元](https://so.toutiao.com/search?keyword=首饰金价格逼近每克700元)
-1. [特斯拉Model Y全系涨价5000元](https://so.toutiao.com/search?keyword=特斯拉Model+Y全系涨价5000元)
 1. [房东索赔上万租客赔四千合理吗](https://so.toutiao.com/search?keyword=房东索赔上万租客赔四千合理吗)
 1. [既是正能量又是大流量](https://so.toutiao.com/search?keyword=既是正能量又是大流量)
 1. [雷军妻子陪邓文迪看SU7](https://so.toutiao.com/search?keyword=雷军妻子陪邓文迪看SU7)
